Use staging compiler to allow Java 16 for fixtures
Former-commit-id: b26d5556ee38759f494aed557b0099d239e5573d